--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,8 +1,8 @@
 name: Latest blog post workflow
 on:
   schedule:
-    # Runs every hour
-    - cron: '0 0 1 * *'
+    # Runs twice a month
+    - cron: '0 0 1,15 * *'
   workflow_dispatch:
 
 jobs:
